--- a/app/views/publishers/_channel.html.slim
+++ b/app/views/publishers/_channel.html.slim
@@ -17,7 +17,7 @@
         div.channel-secondary-information.d-flex.justify-content-between
           - if channel.verified? && current_publisher.feature_flags["p2p_enabled"]
             .bat-channel
-              .crypto-wallet-services data-props={ featureFlags: current_publisher.feature_flags, channel: channel }.to_json
+              .crypto-wallet-services data-channel-id=("#{channel.id}") data-props={ featureFlags: current_publisher.feature_flags, channel: channel }.to_json
                 .spinner
                   .cssload-container
                     .cssload-loading
