--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -1,30 +1,18 @@
-@font-face {
-  font-family: Muli;
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-  src: local("Muli Regular"), local("Muli-Regular"),
-    url("/fonts/muli/Muli-Regular.woff2") format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
+@import url("./variables.css");
+@import url("tailwindcss/base");
+@import url("tailwindcss/components");
+@import url("tailwindcss/utilities");
 
-@font-face {
-  font-family: Muli;
-  font-weight: 700;
-  font-style: normal;
-  src: local("Muli Bold"), local("Muli-Bold"),
-    url("/fonts/muli/Muli-Bold.woff2") format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+@layer utilities {
+  .border-primary {
+    @apply border border-gray-20
+  }
 }
 
 html {
   box-sizing: border-box;
-  font-family: Muli, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
+  font-family: var(--font-poppins), -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: var(--leo-typography-primary-default-regular-font-size);
 
   -webkit-font-smoothing: antialiased;
 }
@@ -36,7 +24,6 @@ html {
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   margin: 0;
   padding: 0;
-  font-weight: normal;
 }
 
 ol, ul {
@@ -52,4 +39,46 @@ img {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  font: var(--leo-font-primary-heading-h1);
+}
+
+h2 {
+  font: var(--leo-font-primary-heading-h2);
+}
+
+h3 {
+  font: var(--leo-font-primary-heading-h3);
+}
+
+h4 {
+  font: var(--leo-font-primary-heading-h4);
+}
+
+hr {
+  margin-top: var(--leo-spacing-16);
+  margin-bottom: var(--leo-spacing-16);
+  border: 0;
+  border-top: 1px solid rgb(30 32 41 / 10%);
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+
+  height: calc(100vh - 80px);
+  padding: 0 var(--leo-spacing-16) var(--leo-spacing-32);
+  padding-top: var(--leo-spacing-32);
+
+  background: var(--leo-color-page-background);
+}
+
+.content-width {
+  width: 800px;
+}
+
+.content-width-sm {
+  width: 650px;
 }
