--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -73,7 +73,10 @@ hr {
 
   display: flex;
   justify-content: center;
-  height: calc(100vh - 80px);
+
+  height: 100%;
+  min-height: calc(100vh - 80px);
+
   background: var(--leo-color-page-background);
 }
 
