--- a/app/views/publishers/_channel.html.slim
+++ b/app/views/publishers/_channel.html.slim
@@ -3,7 +3,7 @@
     div class=("channel-panel channel-#{channel_verification_status(channel)}")
       .channel-panel--intro.mb-1
         .channel-panel--intro-icon
-          img src=(channel_type_icon_url(channel)) width=16 height=16
+          img src=(channel_type_icon_url(channel)) height=25
         .channel-panel--intro-body
           = channel_type(channel).upcase
 
