--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -102,6 +102,10 @@ hr {
   width: 800px;
 }
 
+.content-width-lg {
+  width: 1068px;
+}
+
 .content-width-sm {
   width: 650px;
 }
@@ -125,4 +129,27 @@ hr {
     stroke-dasharray: 90, 150;
     stroke-dashoffset: -124;
   }
+}
+
+.test {
+  position: relative;
+  z-index: 1;
+
+  background: url( '../../public/images/background_gradient_2.svg' );
+  background-size: cover;
+  border-radius: 8px;
+}
+
+.test::after {
+  content: "";
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 60%;
+
+  background: linear-gradient(transparent, #fff);
+  border-radius: 8px;
 }
