add solana bat transfers, move addresses to env variables

--- a/app/views/public_channel/show.slim
+++ b/app/views/public_channel/show.slim
@@ -1,2 +1,2 @@
-.public-channel-page data-props={ featureFlags: current_publisher.feature_flags, siteBanner: @site_banner, cryptoAddresses: @crypto_addresses }.to_json
+.public-channel-page data-props={ featureFlags: current_publisher.feature_flags, siteBanner: @site_banner, cryptoAddresses: @crypto_addresses, cryptoConstants: @crypto_constants }.to_json
     = append_javascript_pack_tag('PublicChannelPage')
