--- a/app/views/application/_panel_flash_messages.html.slim
+++ b/app/views/application/_panel_flash_messages.html.slim
@@ -39,7 +39,7 @@
               = render icon_partial
           .icon-and-text--text data-test-flash-message=""
             p= t "activerecord.shared.errors"
-            - flash[flash_model_key].errors.each do |attribute, message|
+            - flash[flash_model_key].errors.full_messages.each do |attribute, message|
               p
                 strong.error= "#{flash[flash_model_key].class.human_attribute_name(attribute)}:"
                 span= " #{message}"
