--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -20,6 +20,17 @@ html
 
     link rel="icon" type="image/png" href=image_path("favicon.ico")
 
+  body data-action=params[:action] data-controller=params[:controller] data-locale=I18n.locale
+    javascript:
+      // The script tag here runs after the body element has been created
+      // on the DOM but before layout/paint. This allows us to set the class
+      // before layout/paint and avoid a flash of content before the
+      // detection has run.
+      if (typeof(PublicKeyCredential) !== 'undefined') {
+        document.body.classList.add('js-feature-available-u2f');
+      }
+
+
     #main
       - unless request.path.starts_with?("/partners") ||  request.path.starts_with?("/browser_user")
         - if content_for?(:nav)
