--- a/app/views/application/_nav.html.slim
+++ b/app/views/application/_nav.html.slim
@@ -4,7 +4,7 @@ nav.navbar.navbar-default.navbar-static-top.top-nav-collapse
       .nav.pull-left.float-left
         = link_to(root_path) do
           .brave-logo
-            = image_tag 'logo_br_creators.png', height: 80
+            = image_tag 'logo_br_creators.svg', height: 57
       .nav.pull-right.float-right
         = yield(:navbar_content_right)
         - if current_publisher
