Add ActiveAnalytics and Letter Opener

--- a/app/views/admin/errors/not_authorized.html.slim
+++ b/app/views/admin/errors/not_authorized.html.slim
@@ -9,7 +9,7 @@ html lang="en"
   body
     header.header
       .logo
-        = render("logo_wordmark_white_svg")
+        = render("application/logo_wordmark_white_svg")
     content.page
       .container
         .box
