Fix contested channel email bug

--- a/app/views/publisher_mailer/channel_contested.slim
+++ b/app/views/publisher_mailer/channel_contested.slim
@@ -4,7 +4,7 @@
 
 p.salutation= t "publisher_mailer.shared.salutation", name: @publisher_name
 
-p= t ".intro", channel_name: @channel_name
+p= t ".intro", channel_name: @channel_name, name: @publisher_name
 
 div.btn-container= link_to(t(".button"), @transfer_url, class: "btn-primary btn-login")
 
