--- a/nextjs/src/styles/globals.css
+++ b/nextjs/src/styles/globals.css
@@ -26,6 +26,7 @@ html {
 body {
   color: var(--leo-color-text-primary);
   background: var(--leo-color-page-background);
+  font: var(--leo-font-default-regular);
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
@@ -75,6 +76,26 @@ hr {
   border-top: 1px solid var(--leo-color-text-primary);
 }
 
+h1.mobile {
+  font: var(--leo-font-mobile-heading-h1);
+}
+
+h2.mobile {
+  font: var(--leo-font-mobile-heading-h2);
+}
+
+h3.mobile {
+  font: var(--leo-font-mobile-heading-h3);
+}
+
+h4.mobile {
+  font: var(--leo-font-mobile-heading-h4);
+}
+
+.small-regular {
+  font: var(--leo-font-small-regular);
+}
+
 [slot='errors'] {
   display: flex;
   flex-direction: row;
@@ -87,15 +108,19 @@ hr {
 }
 
 .main {
-  @apply py-4 px-2;
-
   display: flex;
   justify-content: center;
 
   height: 100%;
   min-height: calc(100vh - 80px);
+  width: 100%;
 
+  background: var(--leo-color-white);
+}
+
+.content-background {
   background: var(--leo-color-page-background);
+  width: 100%;
 }
 
 .content-width {
@@ -107,7 +132,11 @@ hr {
 }
 
 .animate-dash {
-  animation: dash 1.5s ease-in-out infinite
+  animation: dash 1.5s ease-in-out infinite;
+}
+
+.shadow {
+  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 10%), 0 1px 0 0 rgb(0 0 0 / 5%);
 }
 
 @keyframes dash {
