--- a/app/views/admin/publishers/_case.html.slim
+++ b/app/views/admin/publishers/_case.html.slim
@@ -1,5 +1,4 @@
-
-- if history.object_changes.present? && (changes = YAML.load(history.object_changes)) && changes.keys.any? { |k| ["assignee_id", "status"].include? k }
+- if history.object_changes.present? && (changes = YAML.unsafe_load(history.object_changes)) && changes.keys.any? { |k| ["assignee_id", "status"].include? k }
   .note-header
     span.mr-2= link_to("Case ##{history.number}", admin_case_path(history.item_id), class:'font-weight-bold text-dark')
     small.text-muted.mx-2 &#149;
