--- a/app/views/publishers/site_banners/new.html.slim
+++ b/app/views/publishers/site_banners/new.html.slim
@@ -1,2 +1,3 @@
-= append_javascript_pack_tag("brave_rewards_banner_display")
-= hidden_field_tag 'publisher_id', current_publisher.id
+#rewards-banner-container data-props={ publisher: current_publisher.id}.to_json
+	= append_javascript_pack_tag("banner_editor_page")
+	= hidden_field_tag 'publisher_id', current_publisher.id
