--- a/app/views/publishers/_channel.html.slim
+++ b/app/views/publishers/_channel.html.slim
@@ -26,7 +26,7 @@
               = append_javascript_pack_tag('CryptoWalletServices')
 
           / Show the promo registration if the promo is running
-          - if current_publisher.promo_status(promo_running?) == :active && channel.promo_enabled? && !current_publisher.only_user_funds? && current_publisher.may_register_promo?
+          - if current_publisher.promo_status(promo_running?) == :active && channel.promo_enabled? && !current_publisher.only_user_funds?
             .d-flex.channel--promo-info-container.ml-3
               .d-none.d-sm-block
                 = link_to("", tweet_url(channel.promo_registration.referral_code), target: :_blank, class: "promo-share-button promo-share-button-twitter")
