--- a/nextjs/src/styles/ChannelCard.module.css
+++ b/nextjs/src/styles/ChannelCard.module.css
@@ -7,9 +7,8 @@
   }
 
   .crypto-wallet-dropdown {
-    border: none;
+    border: 1px solid rgba(199 199 204 100%);
     padding-left: 30px;
-    background-color: #F0F1F4;
     border-radius: 8px;
     background-repeat: no-repeat;
     background-position: bottom 10px left 10px;
@@ -58,7 +57,6 @@
     margin-top: 4px;
   }
 }
-
 
 .privacy-header {
   font-family: var(--font-poppins);
