--- a/app/views/site_channels/_verification_failed_modal.html.slim
+++ b/app/views/site_channels/_verification_failed_modal.html.slim
@@ -19,9 +19,6 @@
             = f.submit( \
               t(".try_again"), \
               class: "js-deny btn btn-primary", \
-              style: "display: inherit", \
-              "data-piwik-action": "RetryVerificationClicked", \
-              "data-piwik-name": "Clicked", \
-              "data-piwik-value": "SiteChannelFlow" \
+              style: "display: inherit"
             )
     = link_to t(".close"), "#", class: "js-deny btn btn-outline-primary"
