--- a/app/views/site_channels/new.html.slim
+++ b/app/views/site_channels/new.html.slim
@@ -26,10 +26,7 @@
                   = recaptcha_tags
             = f.submit( \
               t("shared.continue"), \
-              class: "btn btn-block btn-primary", \
-              "data-piwik-action": "ContactInfoClicked", \
-              "data-piwik-name": "Clicked", \
-              "data-piwik-value": "ContactInfoFlow" \
+              class: "btn btn-block btn-primary" \
             )
 
 script id="site-channel-ads-learn-more-modal" type="text/html"
