--- a/app/views/application/_choose_channel_type.html.slim
+++ b/app/views/application/_choose_channel_type.html.slim
@@ -10,7 +10,7 @@
       h6= t "publishers.choose_new_channel_type.website.heading"
       = t "publishers.choose_new_channel_type.website.description"
 
-= link_to(publisher_register_youtube_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddYoutubeChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+= link_to(publisher_register_youtube_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card') do
   .card-body
     .icon-and-text--icon
       = image_tag "choose-channel/youtube.svg", class: "choose-channel--icon"
@@ -18,7 +18,7 @@
       h6= t "publishers.choose_new_channel_type.youtube.heading"
       = t "publishers.choose_new_channel_type.youtube.description"
 
-= link_to(publisher_register_twitch_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddTwitchChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+= link_to(publisher_register_twitch_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card') do
   .card-body
     .icon-and-text--icon
       = image_tag "choose-channel/twitch.svg", class: "choose-channel--icon"
@@ -26,7 +26,7 @@
       h6= t "publishers.choose_new_channel_type.twitch.heading"
       = t "publishers.choose_new_channel_type.twitch.description"
 
-= link_to(publisher_register_twitter_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddTwitterChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+= link_to(publisher_register_twitter_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card') do
   .card-body
     .icon-and-text--icon
       = image_tag "choose-channel/twitter.svg", class: "choose-channel--icon"
@@ -34,7 +34,7 @@
       h6= t "publishers.choose_new_channel_type.twitter.heading"
       = t "publishers.choose_new_channel_type.twitter.description"
 
-= link_to(publisher_register_vimeo_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddVimeoChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+= link_to(publisher_register_vimeo_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card') do
   .new-tag
   .card-body
     .icon-and-text--icon
@@ -43,7 +43,7 @@
       h6= t "publishers.choose_new_channel_type.vimeo.heading"
       = t "publishers.choose_new_channel_type.vimeo.description"
 
-= link_to(publisher_register_reddit_channel_omniauth_authorize_path,  method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddRedditChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+= link_to(publisher_register_reddit_channel_omniauth_authorize_path,  method: :post, class: 'card block-link--card') do
   .new-tag
   .card-body
     .icon-and-text--icon
@@ -52,7 +52,7 @@
       h6= t "publishers.choose_new_channel_type.reddit.heading"
       = t "publishers.choose_new_channel_type.reddit.description"
 
-/ = link_to(publisher_register_github_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card', :"data-piwik-action" => "AddGithubChannelClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "AddChannelFlow") do
+/ = link_to(publisher_register_github_channel_omniauth_authorize_path, method: :post, class: 'card block-link--card') do
 /   .new-tag
 /   .card-body
 /     .icon-and-text--icon
