--- a/app/views/layouts/error.html.slim
+++ b/app/views/layouts/error.html.slim
@@ -1,6 +1,6 @@
 doctype html
 html
-  head data-piwik-host=piwik_domain
+  head
     title Brave Publishers: Error
     link rel="icon" type="image/png" href=image_path("favicon.ico")
     sass:
