--- a/app/views/layouts/headless.html.slim
+++ b/app/views/layouts/headless.html.slim
@@ -1,6 +1,6 @@
 doctype html
 html
-  head data-piwik-host=piwik_domain
+  head
     title= t "shared.app_title"
     = csrf_meta_tags
     = stylesheet_link_tag('application', media: 'all')
