--- a/app/views/layouts/no_js.html.slim
+++ b/app/views/layouts/no_js.html.slim
@@ -1,6 +1,6 @@
 doctype html
 html
-  head data-piwik-host=piwik_domain
+  head
     = csrf_meta_tags
     meta http-equiv="X-UA-Compatible" content="IE=edge"
     meta name="viewport" content="width=device-width, initial-scale=1"
