--- a/app/views/publishers/registrations/log_in.html.slim
+++ b/app/views/publishers/registrations/log_in.html.slim
@@ -13,7 +13,7 @@
           - if @should_throttle
             .form-group
               = recaptcha_tags
-          = submit_tag(t("shared.log_in"), class: "btn btn-block btn-primary", :"data-piwik-action" => "NewAuthLoginClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "NewAuthFlow")
+          = submit_tag(t("shared.log_in"), class: "btn btn-block btn-primary")
 
       .single-panel--footer.single-panel--footer--secondary
         p
