--- a/app/views/publishers/registrations/sign_up.html.slim
+++ b/app/views/publishers/registrations/sign_up.html.slim
@@ -17,7 +17,7 @@
           label
             = check_box_tag :terms_of_service, require: true
             span.pl-2= t('.terms_of_service')
-          = submit_tag t("shared.get_started"), class: "btn btn-block btn-primary", :"data-piwik-action" => "StartFlowClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "Landing"
+          = submit_tag t("shared.get_started"), class: "btn btn-block btn-primary"
 
       .single-panel--footer.single-panel--footer--secondary
         ' #{t("shared.existing_account")}
