--- a/app/views/site_channels/verification_github.html.slim
+++ b/app/views/site_channels/verification_github.html.slim
@@ -25,7 +25,7 @@ script type="text/html" id="verification_failed_modal_wrapper" data-open-verific
             li
               p= t ".nojekyll_html"
             li
-              p= t "site_channels.shared.verification_file.download_html", download_link: link_to(t("shared.download"), download_verification_file_site_channel_path, class: "download-link", :"data-piwik-action" => "GithubDownloadFileClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "GithubFlow")
+              p= t "site_channels.shared.verification_file.download_html", download_link: link_to(t("shared.download"), download_verification_file_site_channel_path, class: "download-link")
               .icon-and-text--wrapper
                 .icon-and-text--icon.icon-and-text--icon--top
                   = image_tag("file@1x.png")
@@ -45,5 +45,5 @@ script type="text/html" id="verification_failed_modal_wrapper" data-open-verific
 
           .panel-controls
             = form_for(current_channel, method: :patch, url: verify_site_channel_path(current_channel)) do |f|
-              = f.submit(t("site_channels.shared.verify_button"), class: "btn btn-wide btn-primary", :"data-piwik-action" => "GithubVerificationClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "GithubFlow")
-              = link_to(t("site_channels.shared.finish_verification_later"), home_publishers_path, class: "site-channels--finish-later", :"data-piwik-action" => "GithubFinishLaterClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "GithubFlow")
+              = f.submit(t("site_channels.shared.verify_button"), class: "btn btn-wide btn-primary")
+              = link_to(t("site_channels.shared.finish_verification_later"), home_publishers_path, class: "site-channels--finish-later")
