--- a/app/views/static/no_js.html.slim
+++ b/app/views/static/no_js.html.slim
@@ -15,9 +15,9 @@
           p= t ".new.body"
           .row.form-row
             .col.col-xs-12.col-sm-12
-              = link_to(t("shared.get_started"), sign_up_publishers_path, class: "btn btn-block btn-primary", :"data-piwik-action" => "StartSignupClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "Landing")
+              = link_to(t("shared.get_started"), sign_up_publishers_path, class: "btn btn-block btn-primary")
               .col.col-xs-12.col-sm-4.button-column
-              = link_to(t("shared.log_in"), log_in_publishers_path, class: "btn btn-block btn-secondary", :"data-piwik-action" => "LandingLoginClicked", :"data-piwik-name" => "Clicked", :"data-piwik-value" => "Landing")
+              = link_to(t("shared.log_in"), log_in_publishers_path, class: "btn btn-block btn-secondary")
           hr.divider
           .row
             .col.col-xs-12.col-sm-12
