Fix index parse

--- a/app/views/faqs/index.html.slim
+++ b/app/views/faqs/index.html.slim
@@ -4,7 +4,7 @@
       = link_to(\
         t("shared.log_in"), \
         log_in_publishers_path, \
-        class: "btn btn-block btn-secondary"
+        class: "btn btn-block btn-secondary")
 
 
   = link_to(\
