--- a/nextjs/src/styles/Layout.module.css
+++ b/nextjs/src/styles/Layout.module.css
@@ -25,3 +25,10 @@
   color: var(--leo-color-text-secondary);
   font: var(--leo-font-components-navbutton);
 }
+
+.nav-mobile {
+	background: var(--leo-color-white);
+	padding: 12px 0;
+	box-shadow: 0 4px 16px -2px rgba(0 0 0 / 10%), 0 1px 0 0 rgba(0 0 0 / 5%);
+	position:relative;
+}
