--- a/app/views/faqs/index.html.slim
+++ b/app/views/faqs/index.html.slim
@@ -4,10 +4,8 @@
       = link_to(\
         t("shared.log_in"), \
         log_in_publishers_path, \
-        class: "btn btn-block btn-secondary", \
-        :"data-piwik-action" => "FAQLoginClicked", \
-        :"data-piwik-name" => "Clicked", \
-        :"data-piwik-value" => "FAQ")
+        class: "btn btn-block btn-secondary")
+
 
   = link_to(\
     t(".title"), \
