--- a/nextjs/src/styles/Layout.module.css
+++ b/nextjs/src/styles/Layout.module.css
@@ -32,3 +32,25 @@
 	box-shadow: 0 4px 16px -2px rgba(0 0 0 / 10%), 0 1px 0 0 rgba(0 0 0 / 5%);
 	position:relative;
 }
+
+.footer {
+	padding: var(--leo-spacing-2xl) var(--leo-spacing-xl) var(--leo-spacing-2xl) var(--leo-spacing-xl);
+	margin-left: 280px;
+}
+
+.footer-divider {
+	padding: 0 8px;
+}
+
+.footer-link {
+	--leo-color-text-interactive: var(--leo-color-text-tertiary);
+	--visited-color: var(--leo-color-text-tertiary);
+}
+
+@media (width <= 768px) {
+  .footer {
+  	border-top: 1px solid var(--leo-color-divider-strong);
+    margin-left: 0;
+    padding: var(--leo-spacing-2xl) var(--leo-spacing-3xl);
+  }
+}
