Update bootstrap to 5

--- a/app/assets/stylesheets/admin/main.scss
+++ b/app/assets/stylesheets/admin/main.scss
@@ -8,6 +8,7 @@
 // Vendor
 @import "font-awesome";
 @import "bootstrap-custom";
+@import "../hover";
 
 // Application
 @import "application-config";
