--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 // Vendor
 @import "bootstrap-custom";
 
+@import "hover";
+
 // Application
 @import "application-config";
 @import "components/**/*";
