--- a/nextjs/src/styles/Toast.module.css
+++ b/nextjs/src/styles/Toast.module.css
@@ -9,14 +9,14 @@
 
   color: var(--leo-color-systemfeedback-info-text);
 
-  background-color: var(--leo-color-primitive-blue-20);
+  background: rgba(210 228 255/ 100%);
   border-radius: var(--leo-radius-m);
   box-shadow: var(--leo-effect-elevation-04);
 }
 
 .toast-progress {
-	--leo-progressring-color: var(--leo-color-systemfeedback-info-text);
-	--leo-progressring-size: 24px;
+  --leo-progressring-color: var(--leo-color-systemfeedback-info-text);
+  --leo-progressring-size: 24px;
 
 	display: inline-block;
   margin-right: var(--leo-spacing-xl);
